--- a/src/components/QuizCardList/QuizCardList.module.scss
+++ b/src/components/QuizCardList/QuizCardList.module.scss
@@ -15,7 +15,7 @@
   box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
   border-radius: 10px;
   transition: 0.3s ease-in-out;
-  background-color: #fff;
+  background-color: #f8f8f8;
   text-decoration: none;
   min-height: 300px;
   & span {
