--- a/src/shared/ui/Table/Table.module.scss
+++ b/src/shared/ui/Table/Table.module.scss
@@ -2,6 +2,9 @@
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  overflow: hidden;
 }
 
 .Table td, .Table th {
@@ -10,6 +13,7 @@
 }
 .Table td {
 }
+
 
 .Table tr:nth-child(even){background-color: #ececec;}
 
