--- a/src/entities/Test/ui/TestForm/TestForm.module.scss
+++ b/src/entities/Test/ui/TestForm/TestForm.module.scss
@@ -8,7 +8,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 32px 64px 32px 16px;
+    padding: 32px 64px 32px 24px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     background-color: #fff;
     border-radius: 12px;
@@ -35,11 +35,13 @@
     }
 
     .input{
+      margin-bottom: 36px;
     }
 
-    .TestSettings{
+    .QuestionSettings{
       display: flex;
       flex-direction: column;
+      width: 40%;
       gap: 20px;
     }
 
@@ -50,7 +52,7 @@
       gap: 20px;
 
       .AnswerOptionLabel{
-        width: 242px;
+        //width: 242px;
         display: flex;
         align-items: center;
         gap: 6px;
@@ -103,3 +105,35 @@
 
 }
 
+.testWrapper{
+  display: flex;
+  flex-direction: column;
+}
+
+.AnswerOptionRadio{
+  transform: scale(1.1);
+  margin-right: 8px;
+}
+
+.Icon{
+  font-size: 32px;
+  cursor: pointer;
+}
+.multiChoice{
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.selectForm{
+  width: 100%;
+  margin-bottom: 40px;
+}
+
+.shortAnswerBlock{
+  width: 80%;
+}
+
+.shortAnswerInput{
+  width: 55%;
+}
