--- a/src/pages/TestEdit/TestEdit.module.scss
+++ b/src/pages/TestEdit/TestEdit.module.scss
@@ -25,16 +25,18 @@
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-
   margin-top: 120px;
+}
 
 
+.setting{
+  width: 100%;
 }
 
 .BtnSaveForm{
   background-color: var(--main-color);
   color: #fff;
-  padding: 10px 12px;
+  padding: 4px 12px;
   border-radius: 12px;
   font-size: 12px;
   font-weight: 600;
@@ -58,13 +60,14 @@
   background-color: #fff;
   border-radius: 12px;
   position: relative;
+  gap: 30px;
 }
 
 .settingsTitle{
   margin-top: 0px;
 }
 
-.settingsInput{
-
+.settingsInput,.selectForm{
+  width: 100%;
 }
 
