--- a/src/entities/Test/ui/TestForm/TestForm.module.scss
+++ b/src/entities/Test/ui/TestForm/TestForm.module.scss
@@ -90,7 +90,7 @@
     font-size: 18px;
     font-weight: 600;
     border: none;
-    margin-top: 24px;
+    // margin-top: 4px;
     transition: 0.3s ease;
     &:hover{
       background-color: #1583d4;
@@ -136,4 +136,16 @@
 
 .shortAnswerInput{
   width: 55%;
+}
+
+
+.textarea{
+  border: 1px solid #eee;
+  border: radius 12px;
+  min-height: 150px;
+  padding: 12px 8px;
+  border-radius:8px;
+  resize: none;
+  font-size: 16px;
+  margin-top: 14px;
 }
