--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   font-family:"Montserrat", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
+  sans-serif!important;
 }
 
 body {
