--- a/src/pages/TestEdit/TestEdit.module.scss
+++ b/src/pages/TestEdit/TestEdit.module.scss
@@ -22,15 +22,25 @@
 
 .TestContainer{
   width: 100%;
-  max-width: 800px;
+  //max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 120px;
 }
 
+.tabContent{
+  margin-top: 130px;
+}
 
 .setting{
   width: 100%;
+}
+
+.settingInline{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .BtnSaveForm{
@@ -71,3 +81,8 @@
   width: 100%;
 }
 
+.settingCheckbox{
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+}
