--- a/src/shared/ui/TestList/TestList.module.scss
+++ b/src/shared/ui/TestList/TestList.module.scss
@@ -4,29 +4,80 @@
     gap: 20px;
     justify-content: flex-start;
   }
-  
-  .CardAdd{
+
+.CardAdd{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 414px;
+    width: 32%;
+    height: 240px;
     gap: 8px;
     box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
     border-radius: 10px;
     transition: 0.3s ease-in-out;
     background-color: #f8f8f8;
     text-decoration: none;
-    min-height: 300px;
+
     & span {
       color: #000000;
       font-size: 22px;
       font-weight: 700;
     }
-  
+
     &:hover{
       box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
       cursor: pointer;
     }
+}
+
+@media(max-width: 1300px){
+  .CardAdd{
+    gap: 0px;
+    & span {
+      color: #000000;
+      font-size: 18px;
+      font-weight: 700;
+    }
   }
-  
+  .iconAdd{
+    width: 48px;
+  }
+}
+
+@media(max-width:1150px){
+  .CardAdd{
+    width: 48%;
+  }
+}
+
+@media(max-width:950px){
+  .CardAdd{
+    width: 100%;
+    height: 150px;
+  }
+}
+
+
+@media(max-width:600px){
+  @media(max-width: 1300px){
+    .CardAdd{
+      gap: 6px;
+      & span {
+        color: #000000;
+        font-size: 18px;
+        font-weight: 700;
+      }
+    }
+    .iconAdd{
+      width: 42px;
+      height: 42px;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .CardList{
+    gap: 10px;
+  }
+}
