--- a/src/entities/Test/ui/TestForm/TestForm.module.scss
+++ b/src/entities/Test/ui/TestForm/TestForm.module.scss
@@ -82,11 +82,7 @@
 
   }
   .AddQuestion{
-    width: 100%;
-    background-color: var(--main-color);
-    color: #fff;
     padding: 16px 0px;
-    border-radius: 12px;
     font-size: 18px;
     font-weight: 600;
     border: none;
@@ -96,8 +92,6 @@
       background-color: #1583d4;
       cursor: pointer;
     }
-
-
     .IconAddQuestion{
       font-size: 24px;
     }
@@ -139,17 +133,23 @@
 }
 
 
-.textarea{
-  border: 1px solid #eee;
+.textareaNewQuestion{
   min-height: 150px;
-  padding: 12px 8px;
-  border-radius:8px;
   resize: none;
-  font-size: 16px;
-  margin-top: 14px;
 }
 
 .singleChoice{
   display: flex;
   gap: 5px;
+}
+
+.testFormTitle{
+  font-size: 18px!important;
+  font-weight: 700!important;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+
+.textareaDescription{
+  margin-top: 20px;
 }
