[#34] previous question navigation
-The functionality of returning to the previous question has been implemented
-You can change the selected answer.
-If the previous question was with a `timeLimit`, then the answer to the question cannot be changed.

--- a/src/pages/TestPage/ui/TestPage.module.scss
+++ b/src/pages/TestPage/ui/TestPage.module.scss
@@ -368,6 +368,10 @@
   font-weight: 400;
 }
 
+.navigationButtons{
+  display: flex;
+  align-items: center;
+}
 
 //position: absolute;
 //top: 69px;
