[#40] student result details
Add:
- Detail info about test result in modal
-Modal component
- Fix mui select (disable scroll lock)

--- a/src/entities/Test/ui/TableTestResults/TestResultsTable.module.scss
+++ b/src/entities/Test/ui/TableTestResults/TestResultsTable.module.scss
@@ -3,3 +3,8 @@
 //  line-height: 18px!important;
 //  padding: 4px!important;
 //}
+
+.tableCellButton {
+   font-size: 12px;
+   font-weight: 600;
+}
