--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 99999999;
+  z-index: 30;
   height: 67px !important;
 }
 
@@ -26,7 +26,7 @@
   border-radius: 1px;
   padding: 0 10px;
   text-decoration: none;
-  transition: 0.4s  ease;
+  transition: 0.4s ease;
 
   &:hover {
     text-decoration: underline 4px;
@@ -35,6 +35,7 @@
 }
 
 .rightContent {
+
   /*   position: relative; */
   button {
     font-size: 14px;
@@ -46,9 +47,11 @@
     line-height: 28px;
     cursor: pointer;
   }
+
   display: flex;
   align-items: center;
   gap: 12px;
+
   .avatar {
     margin-left: 14px;
   }
@@ -61,9 +64,11 @@
   margin-right: 14px;
   cursor: pointer;
 }
+
 .link:hover {
   text-decoration: underline;
 }
+
 .menu {
   position: absolute;
   top: 39px;
@@ -98,14 +103,17 @@
 
 .menuProfile {
   display: flex;
+
   .avatar {
     margin-left: 0px;
   }
+
   .menuProfileColumn {
     display: flex;
     flex-direction: column;
     margin-left: 8px;
   }
+
   .menuProfileName {
     font-weight: 500;
     font-size: 16px;
@@ -117,6 +125,7 @@
     text-overflow: ellipsis;
     margin-right: 12px;
   }
+
   .menuProfileEmail {
     font-weight: 400;
     font-size: 12px;
@@ -136,28 +145,33 @@
   margin-left: 4px;
 }
 
-@media(max-width: 560px){
-  .logo{
+@media(max-width: 560px) {
+  .logo {
     font-size: 18px;
   }
-  .link{
+
+  .link {
     font-size: 16px;
     margin-right: 0;
   }
-  .iconUser{
+
+  .iconUser {
     width: 30px;
     height: 30px;
   }
 }
-@media(max-width: 400px){
-  .logo{
+
+@media(max-width: 400px) {
+  .logo {
     font-size: 16px;
   }
-  .link{
+
+  .link {
     font-size: 14px;
     margin-right: 0;
   }
-  .iconUser{
+
+  .iconUser {
     width: 25px;
     height: 25px;
   }
