--- a/src/pages/TestEditPage/ui/TestEditPage.module.scss
+++ b/src/pages/TestEditPage/ui/TestEditPage.module.scss
@@ -1,4 +1,4 @@
-.tabPanels{
+.tabPanels {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -8,11 +8,11 @@
   top: 67px;
   left: 0;
   right: 0;
-  z-index: 99999999;
+  z-index: 30;
   border-bottom: 1px #ccc solid;
 }
 
-.tabPanelsContent{
+.tabPanelsContent {
   position: relative;
   display: flex;
   justify-content: center;
@@ -20,7 +20,7 @@
   padding: 12px 0px 0px 0px;
 }
 
-.TestContainer{
+.TestContainer {
   width: 100%;
   //max-width: 800px;
   margin-left: auto;
@@ -28,22 +28,22 @@
   margin-top: 120px;
 }
 
-.tabContent{
+.tabContent {
   margin-top: 130px;
 }
 
-.setting{
+.setting {
   width: 100%;
 }
 
-.settingInline{
+.settingInline {
   width: 100%;
   display: flex;
   align-items: center;
   gap: 8px;
 }
 
-.BtnSaveForm{
+.BtnSaveForm {
   background-color: var(--main-color);
   color: #fff;
   padding: 4px 12px;
@@ -55,13 +55,14 @@
   height: min-content;
   position: absolute;
   right: 24px;
-  &:hover{
+
+  &:hover {
     background-color: #1583d4;
     cursor: pointer;
   }
 }
 
-.settingsBlock{
+.settingsBlock {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -73,15 +74,16 @@
   gap: 30px;
 }
 
-.settingsTitle{
+.settingsTitle {
   margin-top: 0px;
 }
 
-.settingsInput,.selectForm{
+.settingsInput,
+.selectForm {
   width: 100%;
 }
 
-.settingCheckbox{
+.settingCheckbox {
   width: 24px;
   height: 24px;
   cursor: pointer;
