--- a/src/pages/TestPage/ui/TestPage.module.scss
+++ b/src/pages/TestPage/ui/TestPage.module.scss
@@ -202,7 +202,7 @@
 }
 
 .optionSelected {
-  background-color: #f5f5f5f9;
+  background-color: rgba(231, 231, 231, 1);
   outline: 1px solid #c3c3c3;
   -webkit-box-shadow: 0px 2px 0px 0px rgba(1, 161, 213, 1);
   -moz-box-shadow: 0px 2px 0px 0px rgba(1, 161, 213, 1);
@@ -284,7 +284,7 @@
   }
 
   .optionSelected:hover {
-    background-color: #f5f5f5f9 !important;
+    background-color: rgba(231, 231, 231, 1) !important;
     outline: 1px solid #c3c3c3 !important;
     -webkit-box-shadow: 0px 2px 0px 0px rgba(1, 161, 213, 1);
     -moz-box-shadow: 0px 2px 0px 0px rgba(1, 161, 213, 1);
@@ -683,7 +683,14 @@
     flex-direction: column;
     row-gap: 10px;
   }
-
+  .buttonBack{
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+  }
+  .buttonNext{
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+  }
   .quiz-question {
     width: 100%;
   }
